--- a/aurora-springboot/src/main/resources/application-prod.yml
+++ b/aurora-springboot/src/main/resources/application-prod.yml
@@ -5,9 +5,9 @@ spring:
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://mysql的ip:3306/aurora?serverTimezone=Asia/Shanghai&allowMultiQueries=true
-    username: 账号
-    password: 密码
+    url: jdbc:mysql://172.17.0.4:3306/aurora?serverTimezone=Asia/Shanghai&allowMultiQueries=true
+    username: root
+    password: 123456
     hikari:
       minimum-idle: 10
       idle-timeout: 180000
@@ -19,9 +19,9 @@ spring:
       connection-test-query: SELECT 1
 
   redis:
-    host: redis的ip
+    host: 172.17.0.2
     port: 6379
-    password: 密码
+    password: 123456
     database: 0
     lettuce:
       pool:
@@ -31,10 +31,10 @@ spring:
         max-wait: 10000
 
   rabbitmq:
-    host: rabbitmq的ip
+    host: 172.17.0.3
     port: 5672
-    username: 账号
-    password: 密码
+    username: guest
+    password: guest
     listener:
       simple:
         retry:
@@ -44,12 +44,12 @@ spring:
 
   elasticsearch:
     rest:
-      uris: es的ip:9200
+      uris: 172.17.0.5:9200
 
   mail:
     host: smtp.163.com
-    username: 邮箱
-    password: 密码
+    username: guyang029@163.com
+    password: EHetAg4ZmrmBjLDi
     default-encoding: UTF-8
     protocol: smtp
     port: 465
@@ -86,11 +86,11 @@ search:
 upload:
   mode: oss
   oss:
-    url: http://Bucket域名/
-    endpoint: OSS配置endpoint
-    accessKeyId: OSS配置accessKeyId
-    accessKeySecret: OSS配置accessKeySecret
-    bucketName: OSS配置bucketName
+    url: http://blog-test-gy1.oss-cn-beijing.aliyuncs.com/
+    endpoint: oss-cn-beijing.aliyuncs.com
+    accessKeyId: LTAI5tPBC9GCYznSqqdWsZQD
+    accessKeySecret: 2TV4fAIC9axOIVdavwYTS9MhjcSR5I
+    bucketName: blog-test-gy1
   minio:
     url: http://minio的ip:9000/
     endpoint: http://minio的ip:9000
